--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "uvicorn (>=0.38.0,<0.39.0)",
     "requests (>=2.32.5,<3.0.0)",
     "beautifulsoup4 (>=4.14.3,<5.0.0)",
-    "pandas (>=2.3.3,<3.0.0)"
+    "pandas (>=2.3.3,<3.0.0)",
+    "flask (>=3.1.2,<4.0.0)",
+    "flask-restx (>=1.3.2,<2.0.0)"
 ]
 
 
