--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     {name = "Jonatas Locateli",email = "jonataslocateli@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "fastapi (>=0.124.4,<0.125.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
@@ -15,7 +15,9 @@ dependencies = [
     "beautifulsoup4 (>=4.14.3,<5.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "flask (>=3.1.2,<4.0.0)",
-    "flask-restx (>=1.3.2,<2.0.0)"
+    "flask-restx (>=1.3.2,<2.0.0)",
+    "flask-jwt-extended (>=4.7.1,<5.0.0)",
+    "streamlit (>=1.52.2,<2.0.0)"
 ]
 
 
