Add environment configuration, user authentication, and book management features
- Create .env.example for environment variables
- Update .gitignore to exclude environment files and Python artifacts
- Implement key generation script for secure keys
- Refactor database configuration in config.py
- Enhance user model with password hashing
- Introduce UserRepository for user data management
- Implement authentication routes with JWT support
- Update books service to return detailed book information
- Adjust database paths for better structure
- Remove unused databases

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,47 @@
+# Environment
 venv/
 .env
+.venv/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Flask
+instance/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
