feat: update environment configuration and improve Swagger setup

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Chave secreta da aplicação Flask
-# Gere uma chave segura com: python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY=your_secret_key_here
 
 # Chave secreta para assinatura JWT
-# Gere uma chave segura com: python -c "import secrets; print(secrets.token_hex(32))"
 JWT_SECRET_KEY=your_jwt_secret_key_here
 
 # URI do banco de dados
-# Exemplo: sqlite:///user.db (SQLite), postgresql://user:pass@localhost/dbname
 DATABASE_URI=sqlite:///user.db
+
+# Esquema do protocolo de transferência da api (http, https)
+SWAGGER_SCHEMES=http
