--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ JWT_SECRET_KEY=your_jwt_secret_key_here
 # URI do banco de dados
 DATABASE_URI=sqlite:///user.db
 
-# Esquema do protocolo de transferência da api (http, https)
+# Configurações de esquema do swagger (http, https)
 SWAGGER_SCHEMES=http
